--- a/static/scss/pages/_page.scss
+++ b/static/scss/pages/_page.scss
@@ -103,6 +103,7 @@
         &__inner
         {
             position: relative;
+            margin-bottom: 3rem;
             padding-top: 4rem;
             @extend %box-shadow;
 
